stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_unsupported_nested_record_pattern.snap
---
source: tests/fixtures.rs
assertion_line: 1597
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/unsupported_nested_record_pattern.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unsupported nested record pattern
   ╭─[tests/fixtures/diagnostics/types/unsupported_nested_record_pattern.ml:8:5]
 7 │   dbg(match value {
 8 │     Result.point.extra { x: x } -> x,
   ·     ─────────────┬─────────────
   ·                  ╰── stage0 can resolve local records and two-segment imported records, but `Result.point.extra` has more segments
 9 │     _ -> 0
   ╰────
  help: use a local record type or a two-segment imported record path
